--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "prepare": "npm run build",
     "test:coverage": "jest --coverage",
-    "lint": "eslint . --ext .ts"
+    "test:watch": "jest --watch",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "type-check": "tsc --noEmit",
+    "security-check": "npm audit || echo 'Security vulnerabilities found - please review'",
+    "quality-check": "npm run lint && npm run type-check",
+    "check-deps": "npm outdated",
+    "ci-check": "npm run quality-check && npm run test:coverage && npm run build",
+    "pre-commit": "npm run lint:fix && npm run type-check && npm run test",
+    "clean": "rimraf dist coverage",
+    "prepare": "npm run build && husky install",
+    "postinstall": "husky install"
   },
   "repository": {
     "type": "git",
@@ -36,7 +46,9 @@
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
     "eslint": "^9.30.1",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "rimraf": "^6.0.1",
     "supertest": "^7.1.3",
     "ts-jest": "^29.4.0",
     "typescript": "^5.0.0"
